--- a/ML/user_match_model.ipynb
+++ b/ML/user_match_model.ipynb
@@ -2,17 +2,141 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "source": [
-    "print(\"hello\")"
+    "from sklearn.cluster import KMeans\r\n",
+    "import pandas as pd\r\n",
+    "from sklearn.preprocessing import MinMaxScaler\r\n",
+    "from matplotlib import pyplot as plt\r\n",
+    "%matplotlib inline"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "df = pd.read_csv(\"personal_details.csv\")\r\n",
+    "df.head()"
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "hi\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Sport</th>\n",
+       "      <th>Tv Show</th>\n",
+       "      <th>Pet</th>\n",
+       "      <th>Hobbies</th>\n",
+       "      <th>Career</th>\n",
+       "      <th>Allocation_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rob</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Football</td>\n",
+       "      <td>How I Met Your Mother</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Skiing</td>\n",
+       "      <td>Lawyer</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Football</td>\n",
+       "      <td>Suits</td>\n",
+       "      <td>Snake</td>\n",
+       "      <td>Running</td>\n",
+       "      <td>Graphic Designer</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mohan</td>\n",
+       "      <td>29</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ismail</td>\n",
+       "      <td>28</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kory</td>\n",
+       "      <td>42</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  Age Gender     Sport                Tv Show    Pet  Hobbies  \\\n",
+       "0      Rob   27   Male  Football  How I Met Your Mother    Dog   Skiing   \n",
+       "1  Michael   29  Other  Football                  Suits  Snake  Running   \n",
+       "2    Mohan   29    NaN       NaN                    NaN    NaN      NaN   \n",
+       "3   Ismail   28    NaN       NaN                    NaN    NaN      NaN   \n",
+       "4     Kory   42    NaN       NaN                    NaN    NaN      NaN   \n",
+       "\n",
+       "             Career  Allocation_ID   \n",
+       "0            Lawyer             1.0  \n",
+       "1  Graphic Designer             3.0  \n",
+       "2               NaN             NaN  \n",
+       "3               NaN             NaN  \n",
+       "4               NaN             NaN  "
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
     }
    ],
    "metadata": {}
