--- a/ML/user_match_model.ipynb
+++ b/ML/user_match_model.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "source": [
     "df = pd.read_csv(\"personal_details.csv\")\r\n",
     "df.head()"
@@ -51,7 +51,7 @@
        "      <th>Pet</th>\n",
        "      <th>Hobbies</th>\n",
        "      <th>Career</th>\n",
-       "      <th>Allocation_ID</th>\n",
+       "      <th>Cluster</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -127,16 +127,16 @@
        "3   Ismail   28    NaN       NaN                    NaN    NaN      NaN   \n",
        "4     Kory   42    NaN       NaN                    NaN    NaN      NaN   \n",
        "\n",
-       "             Career  Allocation_ID   \n",
-       "0            Lawyer             1.0  \n",
-       "1  Graphic Designer             3.0  \n",
-       "2               NaN             NaN  \n",
-       "3               NaN             NaN  \n",
-       "4               NaN             NaN  "
+       "             Career  Cluster  \n",
+       "0            Lawyer      1.0  \n",
+       "1  Graphic Designer      3.0  \n",
+       "2               NaN      NaN  \n",
+       "3               NaN      NaN  \n",
+       "4               NaN      NaN  "
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 11
     }
    ],
    "metadata": {}
