--- a/ML/profile_cluster.ipynb
+++ b/ML/profile_cluster.ipynb
@@ -2,61 +2,368 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bios</th>\n",
+       "      <th>Movies</th>\n",
+       "      <th>TV</th>\n",
+       "      <th>Religion</th>\n",
+       "      <th>Music</th>\n",
+       "      <th>Sports</th>\n",
+       "      <th>Books</th>\n",
+       "      <th>Politics</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Typical twitter fanatic. Infuriatingly humble thinker. Lifelong coffee practitioner. Organizer.</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Web junkie. Analyst. Infuriatingly humble introvert. Food nerd. Lifelong music fanatic. Coffee lover.</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Avid web maven. Food practitioner. Gamer. Twitter fanatic. Pop culture scholar. Zombie evangelist.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Twitteraholic. Extreme web fanatic. Food buff. Infuriatingly humble entrepreneur.</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bacon enthusiast. Falls down a lot. Freelance social media fan. Infuriatingly humble introvert.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                    Bios  \\\n",
+       "0        Typical twitter fanatic. Infuriatingly humble thinker. Lifelong coffee practitioner. Organizer.   \n",
+       "1  Web junkie. Analyst. Infuriatingly humble introvert. Food nerd. Lifelong music fanatic. Coffee lover.   \n",
+       "2     Avid web maven. Food practitioner. Gamer. Twitter fanatic. Pop culture scholar. Zombie evangelist.   \n",
+       "3                      Twitteraholic. Extreme web fanatic. Food buff. Infuriatingly humble entrepreneur.   \n",
+       "4        Bacon enthusiast. Falls down a lot. Freelance social media fan. Infuriatingly humble introvert.   \n",
+       "\n",
+       "   Movies  TV  Religion  Music  Sports  Books  Politics  \n",
+       "0       5   3         4      1       3      6         7  \n",
+       "1       7   9         5      1       9      4         0  \n",
+       "2       1   2         6      5       6      5         4  \n",
+       "3       5   2         7      8       2      6         6  \n",
+       "4       6   6         6      4       3      6         3  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Libraries\r\n",
-    "import pandas as pd\r\n",
-    "pd.set_option('display.max_colwidth', 500)\r\n",
-    "import pickle as pickle\r\n",
-    "\r\n",
-    "df = pd.read_csv('csv_files/Atlas_test_data_raw.csv')\r\n",
+    "# This script will read the raw excel file we pass and convert to a pickle file (convert the file to byte stream so that is compressing the large qauntity of data)\n",
+    "# In the clustering process this is the first step to do\n",
+    "\n",
+    "import pandas as pd\n",
+    "pd.set_option('display.max_colwidth', 500)\n",
+    "import pickle as pickle\n",
+    "\n",
+    "df = pd.read_csv('raw_csv_files/Atlas_test_data_raw.csv')\n",
     "df.head()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "pickle_file = open(\"pkl_files/userProfile.pkl\", \"wb\")\r\n",
+    "pickle_file = open(\"pkl_files/userProfile.pkl\", \"wb\")\n",
     "pickle.dump(df, pickle_file)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "unpickle_file = open(\"pkl_files/userProfile.pkl\", \"rb\")\r\n",
-    "pickle.load(unpickle_file)"
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bios</th>\n",
+       "      <th>Movies</th>\n",
+       "      <th>TV</th>\n",
+       "      <th>Religion</th>\n",
+       "      <th>Music</th>\n",
+       "      <th>Sports</th>\n",
+       "      <th>Books</th>\n",
+       "      <th>Politics</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Typical twitter fanatic. Infuriatingly humble thinker. Lifelong coffee practitioner. Organizer.</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Web junkie. Analyst. Infuriatingly humble introvert. Food nerd. Lifelong music fanatic. Coffee lover.</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Avid web maven. Food practitioner. Gamer. Twitter fanatic. Pop culture scholar. Zombie evangelist.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Twitteraholic. Extreme web fanatic. Food buff. Infuriatingly humble entrepreneur.</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bacon enthusiast. Falls down a lot. Freelance social media fan. Infuriatingly humble introvert.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>Bacon fan. Music aficionado. Twitter specialist. Certified coffeeaholic. Explorer.</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>Internet fanatic. Extreme social media lover. Professional student. Web trailblazer. Certified troublemaker. Entrepreneur. Award-winning thinker. Travel maven.</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>Social media fanatic. Zombie buff. Food geek. Lifelong entrepreneur. Evil bacon maven. Travel fan. Writer. Communicator. Friendly coffee enthusiast.</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>Lifelong bacon nerd. Passionate pop culture fanatic. Friendly beer ninja. Tv enthusiast. Writer. Evil food guru. Extreme music maven. Alcohol trailblazer.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>Social media junkie. Hipster-friendly internet specialist. Avid food enthusiast. Bacon advocate. Musicaholic. Alcohol fan. Zombie nerd.</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>114 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                Bios  \\\n",
+       "0                                                                    Typical twitter fanatic. Infuriatingly humble thinker. Lifelong coffee practitioner. Organizer.   \n",
+       "1                                                              Web junkie. Analyst. Infuriatingly humble introvert. Food nerd. Lifelong music fanatic. Coffee lover.   \n",
+       "2                                                                 Avid web maven. Food practitioner. Gamer. Twitter fanatic. Pop culture scholar. Zombie evangelist.   \n",
+       "3                                                                                  Twitteraholic. Extreme web fanatic. Food buff. Infuriatingly humble entrepreneur.   \n",
+       "4                                                                    Bacon enthusiast. Falls down a lot. Freelance social media fan. Infuriatingly humble introvert.   \n",
+       "..                                                                                                                                                               ...   \n",
+       "109                                                                               Bacon fan. Music aficionado. Twitter specialist. Certified coffeeaholic. Explorer.   \n",
+       "110  Internet fanatic. Extreme social media lover. Professional student. Web trailblazer. Certified troublemaker. Entrepreneur. Award-winning thinker. Travel maven.   \n",
+       "111             Social media fanatic. Zombie buff. Food geek. Lifelong entrepreneur. Evil bacon maven. Travel fan. Writer. Communicator. Friendly coffee enthusiast.   \n",
+       "112       Lifelong bacon nerd. Passionate pop culture fanatic. Friendly beer ninja. Tv enthusiast. Writer. Evil food guru. Extreme music maven. Alcohol trailblazer.   \n",
+       "113                          Social media junkie. Hipster-friendly internet specialist. Avid food enthusiast. Bacon advocate. Musicaholic. Alcohol fan. Zombie nerd.   \n",
+       "\n",
+       "     Movies  TV  Religion  Music  Sports  Books  Politics  \n",
+       "0         5   3         4      1       3      6         7  \n",
+       "1         7   9         5      1       9      4         0  \n",
+       "2         1   2         6      5       6      5         4  \n",
+       "3         5   2         7      8       2      6         6  \n",
+       "4         6   6         6      4       3      6         3  \n",
+       "..      ...  ..       ...    ...     ...    ...       ...  \n",
+       "109       9   7         2      8       8      2         5  \n",
+       "110       4   2         8      8       3      5         2  \n",
+       "111       7   8         4      1       5      9         5  \n",
+       "112       1   9         2      9       6      8         0  \n",
+       "113       7   9         3      3       3      0         6  \n",
+       "\n",
+       "[114 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "outputs": [],
-   "metadata": {}
+   "source": [
+    "unpickle_file = open(\"pkl_files/userProfile.pkl\", \"rb\")\n",
+    "pickle.load(unpickle_file)"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "111ee1e6c96c755d4829a8a7fd2c3ebf5d707e63c33323f13a8b70d69936d9fa"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit (windows store)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.9.7",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.7 64-bit (windows store)"
-  },
-  "interpreter": {
-   "hash": "111ee1e6c96c755d4829a8a7fd2c3ebf5d707e63c33323f13a8b70d69936d9fa"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
